--- a/src/app/layouts/common-layout/common-layout.component.html
+++ b/src/app/layouts/common-layout/common-layout.component.html
@@ -1,1 +1,12 @@
-<p>common-layout works!</p>
+<div class="antialiased bg-gray-50 dark:bg-gray-900">
+  <app-header></app-header>
+
+  <!-- Sidebar -->
+  <app-menu></app-menu>
+
+  <main class="p-4 md:ml-64 h-auto pt-20">
+    <router-outlet></router-outlet>
+  </main>
+
+</div>
+
